# framefeed

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  compose.yaml  nginx.conf  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  publish.yml
docs/: apple-shared-albums.md  architecture.md  reterminal-e1004.md  unraid.md
presets/: reterminal-e1004-landscape.env  reterminal-e1004-portrait.env
scripts/: init.sh
src/framefeed/: __init__.py  app.py
tests/: test_app.py
